# black-widow

./: .EXPLORATION_SUMMARY.txt  .gitignore  .karadul-ghidra-architecture.md  .karadul-ghidra-quick-ref.md  CHANGELOG.md  KARADUL_CLI_PIPELINE_ANALYSIS.md  LICENSE  MANIFEST.in  MATH_VERIFICATION_REPORT.md  README-GHIDRA-EXPLORATION.md  README.md  REGEX_AUDIT_REPORT.md  RELEASE_NOTES_v1.11.0-beta.md  crypto_algorithm_database.json  mypy.ini  new_engineering_algorithms.json  pyproject.toml  requirements-deobf.txt  requirements-ml.txt
benchmarks/: aho_corasick_benchmark.py  baseline_metrics.json  bsim_shadow_calibration_2026_04_23.json  mypy_baseline_2026_04.txt  silent_except_baseline_2026_04.json  stripped_baseline_2026_04_23.json  stripped_baseline_2026_04_23_real.json
docs/: API.md  ARCHITECTURE.md  ARTIFACTS_PENDING_MIGRATION.md  BLACKHAT-BLACK-WIDOW-RESEARCH-REPORT.md  CONTRIBUTING.md  EXAMPLES.md  FEATURE_ADOPTION_PLAN.md  IMPOSSIBLE-RE-MATH-ANALYSIS.md  IMPOSSIBLE_SOLUTIONS_PLAN.md  MASTER_PLAN.md  OPEN_SOURCE_RE_TOOLS_ANALYSIS.md  PLAN_80_PERCENT.md  RE-ANTI-TECHNIQUES-RESEARCH.md  SECURITY_AUDIT.md  V1_RELEASE_PLAN.md  decompiler_backends.md  library-signatures.md  multi-language-decompilation-plan.md  quickstart.md  typeforge_setup.md  vscode-dts-mapping-report.md
karadul/: __init__.py  __main__.py  batch.py  cli.py  config.py  exceptions.py  gpu_utils.py  hacker_cli.py  stages.py
scripts/: aggressive-rename.mjs  analyze-new-targets.py  apply-names.mjs  apply-names.mjs.bak2  apply-params.mjs  batch-analyze.py  batch-cursor-full.py  beautify.mjs  benchmark_claude_code.py  build-signature-db.py  build_byte_signatures.py  build_ngram_db.py  build_ngram_db_v2.py  build_sig_lmdb.py  bun-extract.py  check_benchmark_thresholds.py  ci_baseline_check.py  context-analyzer.mjs  context-analyzer.mjs.bak2  cursor-enhanced-rename.mjs  cursor_3bundle_analysis.py  dedup_signatures.py  deep-deobfuscate.mjs  deobfuscate.mjs  esbuild-unpack.mjs  expand_cfg_templates.py  extract-flirt-sigs.py  extract-inline-regions.mjs  extract-macos-frameworks.py  extract-modules.mjs  gen_anaconda_sigs.py  gen_cpp_stl_sigs.py  gen_dyld_sigs.py  gen_flirt_sigs.py  gen_go_sigs.py  gen_homebrew_extra_sigs.py  gen_homebrew_sigs.py  gen_intrinsics_sigs.py  gen_mingw_headers_sigs.py  gen_msys2_sigs.py  (+29 more)
teknik_dokuman/: main.aux  main.out  main.tex  main.toc
tests/: conftest.py  test_angr_pipeline_integration.py  test_batch_v1_10_0.py  test_binary_intelligence.py  test_binary_intelligence_fortran_gate.py  test_binary_reconstruction.py  test_bindiff.py  test_bsim.py  test_bsim_fusion_integration.py  test_bsim_shadow_step.py  test_byte_pattern_matcher.py  test_call_graph_parity.py  test_callee_profile_propagator.py  test_capa_funcname_mapping.py  test_capa_integration.py  test_cff_deflattener.py  test_cfg_analyzer.py  test_cfg_extraction_parity.py  test_cfg_isomorphism.py  test_cfg_template_integration.py  test_chunked_processor.py  test_computation_integration.py  test_computation_recovery.py  test_convergence_fix.py  test_cpp_rtti.py  test_cpp_rtti_msvc.py  test_cpp_rtti_multi_inheritance.py  test_cursor_deobf_enhancements.py  test_debugger_bridge.py  test_decompile_all_parity.py  test_decompiler_backends.py  test_deep_tracing_helpers.py  test_delphi_binary.py  test_deobfuscator.py  (+123 more)
(+350 files in other folders)
